Fix alignent

--- a/src/components/mini-projects/Wave/Wave.css
+++ b/src/components/mini-projects/Wave/Wave.css
@@ -1,12 +1,14 @@
 .Wave {
   display: flex;
   overflow: hidden;
-  padding-top: 35%;
   justify-content: center;
+  bottom: 50px;
+  position: fixed;
+  width: 90%;
+  margin: auto;
 }
 
 .Person {
-  bottom: 50px;
 }
 
 .person {
